test_outputs/connlist/semanticDiff-different-topologies-policy-a_connlist_output.txt
0.0.0.0-255.255.255.255 => default/cog-agents-0[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents-2[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents-3[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents-0[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-0[DaemonSet] => default/cog-agents-2[DaemonSet] : All Connections
default/cog-agents-0[DaemonSet] => default/cog-agents-3[DaemonSet] : All Connections
default/cog-agents-0[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents-1[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-2[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-3[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents-2[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-1[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-3[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-agents-3[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-3[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-3[DaemonSet] => default/cog-agents-2[DaemonSet] : All Connections
default/cog-agents-3[DaemonSet] => default/cog-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => default/cog-agents-2[DaemonSet] : All Connections
default/cog-local-analyzer-7d77fb55cc[ReplicaSet] => default/cog-agents-3[DaemonSet] : All Connections
